tests/fail/02_struct_errors.zn
foreign u0 printf(*char)

struct Greeter {
    f32 p
}

u0 Greeter::say() {
    printf("Hi\n")
}

u0 Greeter::say() {
    printf("duplicate\n")
}

i32 main() {
    Ghost::method()
    Greeter::unknown()
    return 0
}
